--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IJCCBD - International Journal of Cloud Computing and Big Data</title>
-   
+    <meta name="keywords" content="IJCCBD, International Journal of Cloud Computing and Big Data , Cloud Optimization, Hybrid Cloud, Public Cloud,Private Cloud,Edge Computing, Data Processing,  Data Storage,Cloud Infrastructure, Big Data,Cloud Automation,Cloud Computing" />
+    <meta name="description" content="International Journal of Cloud Computing and Big Data publishes cutting-edge research on cloud technologies, big data analytics, security, and innovations." />
+    <meta name="author" content="IJCCBD Editorial Team" />
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="International Journal of Cloud Computing and Big Data(IJCCBD)" />
+    <meta property="og:description" content="International Journal of Cloud Computing and Big Data publishes cutting-edge research on cloud technologies, big data analytics, security, and innovations." />
+    <meta property="og:url" content="https://www.ijccbd.com/" />
+    <meta property="og:image" content="https://ijccbd.com/assets/IJCCBD.png" />
+
+    <link rel="canonical" href="https://www.ijccbd.com/" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Periodical",
+        "name": "International Journal of Cloud Computing and Big Data",
+        "alternateName": "IJCCBD",
+        "publisher": {
+          "@type": "Organization",
+          "name": "International Journal of Cloud Computing and Big Data",
+          "url": "https://www.ijccbd.com"
+        },
+        "url": "https://www.ijccbd.com",
+        "description": "International Journal of Cloud Computing and Big Data publishes cutting-edge research on cloud technologies, big data analytics, security, and innovations.",
+        "image": "https://ijccbd.com/assets/IJCCBD.png"
+      }
+      </script>
   </head>
   <body>
     <div id="root"></div>
